Feature/improve input checking in nir lambda 3496 (#244)
* support input checking and proper error handling in NirvanaLambda

* Make GetS3KeysFromEnvironment method public

* Fix one unit test as the expection type has been changed

--- a/Genome/Genome.csproj
+++ b/Genome/Genome.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
   <Import Project="..\VariantAnnotation\CommonAssemblyInfo.props" />
   <ItemGroup>
+    <ProjectReference Include="..\ErrorHandling\ErrorHandling.csproj" />
     <ProjectReference Include="..\Intervals\Intervals.csproj" />
     <ProjectReference Include="..\IO\IO.csproj" />
   </ItemGroup>
