--- a/Compression/Compression.csproj
+++ b/Compression/Compression.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <ProjectReference Include="..\ErrorHandling\ErrorHandling.csproj" />
     <ProjectReference Include="..\IO\IO.csproj" />
+    <ProjectReference Include="..\OptimizedCore\OptimizedCore.csproj" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Packages\BlockCompression\BlockCompression.dll" Link="BlockCompression.dll">
